# todo-cli

./: .dockerignore  .gitignore  API_README.md  Dockerfile  Procfile  README.md  clean_imports.py  comprehensive_test.py  docker-compose.yml  fix_minikube.ps1  generate_correct_token.py  generate_token.py  main.py  pyproject.toml  requirements.txt  run_agent_cli.py  start_server.bat  start_server.py  test_api.py  test_env.py  test_fastapi.py  tmpclaude-aaa3-cwd
.claude/: settings.local.json
.claude/agents/: better-auth-architect.md  domain-logic-architect.md  fastapi-backend-architect.md  frontend-specialist.md  postgres-db-architect.md  sqlmodel-orm-architect.md  system-orchestrator.md
.claude/commands/: sp.reverse-engineer.md
.gemini/: settings.json
.gemini/commands/: sp.reverse-engineer.toml
.specify/memory/: constitution.md
.specify/templates/: spec-template.md  tasks-template.md
auth/: Dockerfile  README.md  app.py  deploy.bat  deploy.sh  requirements.txt  server.py  start_auth_service.py  update_database_schema.py  verify_database_schema.py
backend/: Dockerfile  alembic.ini  check_and_fix_schema.py  inspect_db.py  main.py  mcp_server.py  server.py  test_crash_recovery.py  test_database_connection.py  test_e2e.py  test_performance.py  test_persistence.py  tmpclaude-d27a-cwd
backend/alembic/: env.py
backend/config/: backup_config.py
frontend/: Dockerfile  README.md  build-info.txt  eslint.config.mjs  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
p3Helm/: Chart.yaml  values.yaml
(+323 files in other folders)
